added tape roll

--- a/VirtualAddingMachine/VirtualAddingMachine/Client/VirtualAddingMachine.Client.csproj
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/VirtualAddingMachine.Client.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Shared\VirtualAddingMachine.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
