--- a/VirtualAddingMachine/VirtualAddingMachine/Client/VirtualAddingMachine.Client.csproj
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/VirtualAddingMachine.Client.csproj
@@ -16,7 +16,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\delete.png" />
+    <None Include="wwwroot\Images\download.png" />
+    <None Include="wwwroot\Images\edit.png" />
+    <None Include="wwwroot\Images\note.png" />
+    <None Include="wwwroot\Images\print.png" />
+    <None Include="wwwroot\Images\save.jpg" />
   </ItemGroup>
 
 </Project>
